plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'net.neoforged.gradle.userdev' version '7.0.+'
}

version = '1.2.2'
group = 'sculktransporting'

base {
	archivesName = 'sculktransporting-1.21.4'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

runs {
    configureEach {
        systemProperty 'forge.logging.console.level', 'debug'
        modSource project.sourceSets.main
    }

    client {
        workingDirectory project.file('runs/client')
    }

    server {
        workingDirectory project.file('runs/server')
        argument '-nogui'
    }
	
	clientData {
		workingDirectory project.file('runs/data')
		arguments.addAll '--mod', 'sculktransporting', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
	}
}

repositories {
    maven {
        url "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
	implementation 'net.neoforged:neoforge:21.4.12-beta'
	//implementation "curse.maven:patchouli-306770:5683901"
}

sourceSets.main.resources {
	srcDir 'src/generated/resources'
}

tasks.named('jar', Jar).configure {
	exclude('sculktransporting/datagen/**') //exclude files from the built jar that are only used to generate the assets & data

    manifest {
        attributes([
                "Specification-Title": project.name,
                "Specification-Vendor": "bl4ckscor3, Redstone_Dubstep",
                "Specification-Version": project.jar.archiveVersion,
                "Implementation-Title": project.name,
                "Implementation-Version": project.jar.archiveVersion,
                "Implementation-Vendor": "bl4ckscor3, Redstone_Dubstep"
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
	options.release = 21
}
